# opencl-ncc

./: .gitignore  CMakeLists.txt  README.md  main.cpp
c-impl/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  opencl-helpers.cpp  opencl-helpers.h  timing.cpp  timing.h
opencl-impl/: CMakeLists.txt  Makefile  main.cpp  resize.cl
